# Simple-Bank-system

./: .gitignore  CMakeLists.txt  README.md
include/: Account.h  Bank Management.h  Person.h  Utils.h
src/: Account.cpp  Bank Management.cpp  Person.cpp
test/: main.cpp
